# serde-synphasor

./: Cargo.toml  README.md
.github/workflows/: build-environments.yaml  nostd_environments.yaml  release-packaging.yaml  test.yaml
src/: deserializer.rs  error.rs  lib.rs  serializer.rs
src/c37118/: decoder.rs  deserializer.rs  encoder.rs  error.rs  mod.rs  serializer.rs
src/c37118/message/: cmd.rs  mod.rs
src/message/: cmd.rs  mod.rs
src/types/: container.rs  mod.rs  time.rs
tests/: deserialize.rs  mod.rs  serialize.rs
tests/c37118/: deserialize.rs  serialize.rs
