[package]
name = "serde-synphasor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0.138", default-features=false, features=["derive"]}
log = "0.4.0"

[dev-dependencies]
pretty_env_logger = "0.4.0"
